syntax = "proto3";

package com.muuzika.registry;

import "google/protobuf/empty.proto";

import "registry/common.proto";
import "registry/registration.proto";
import "registry/create_room.proto";
import "registry/sync_room.proto";

// SERVER -> REGISTRY

message ServerToRegistryRequest {
  oneof request {
    ServerRegistrationRequest registration = 1;
    RoomRegistryDefinition sync_room = 2;
  }
}

message ServerToRegistryResponse {
  oneof response {
    CreateRoomInServerResponse create_room = 1;
    google.protobuf.Empty temp = 2;
  }
}

//  REGISTRY -> SERVER

message RegistryToServerRequest {
  oneof request {
    CreateRoomInServerRequest create_room = 1;
  }
}

message RegistryToServerResponse {
  oneof response {
    google.protobuf.Empty internal_error = 1;
    ServerRegistrationResponse server_registration = 2;
    SyncRoomResponse sync_room = 3;
  }
}

//

message ServerToRegistryMessage {
  optional uint64 request_id = 1;
  oneof message {
    ServerToRegistryRequest request = 2;
    ServerToRegistryResponse response = 3;
  }
}


message RegistryToServerMessage {
  optional uint64 request_id = 1;
  oneof message {
    RegistryToServerRequest request = 2;
    RegistryToServerResponse response = 3;
  }
}

service RegistryService {
  rpc RegisterServer(stream ServerToRegistryMessage) returns (stream RegistryToServerMessage);
}



